styling of barista-sca, brewing-sca and intro.html

--- a/barista-sca.html
+++ b/barista-sca.html
@@ -15,9 +15,9 @@
 
     <header>
 
-        <! --- navbar --->
+        <!-- navbar -->
 
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,41 +47,41 @@
     </header>
 
 
-    <! --- main section --->
+    <!-- main section -->
 
     <div class="container main-container">
         <div class="container main-landing">
             <div class="row">
                 <div class="col">
                     <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
-                    <p class="ph-landing uppercase">our courses</p>
+                    <p class="ph-landing uppercase">courses</p>
                 </div>
             </div>
         </div>
     </div>
 
-    <! --- media object --->
+    <!-- media object -->
 
     <div class="container">
         <div class="row">
             <div class="col">
 
-                <div class="media">
+                <div class="media mt-5 py-3 my-border">
                     <img src="./assets/images/barista-sca.png" alt="latte art image" class="align-self-center mx-3 mt-2" style="width:33%">
-                    <div class="media-body">
-                        <h2>Barista SCA</h2>
-                        <p>This course is for people new to the coffee industry, with no experience, and focuses on the key skills required to work in a coffee shop, like how to set your grinder, make espresso and foam and texture milk for cappuccinos.</p>
+                    <div class="media-body mt-5">
+                        <h2 class="uppercase mb-2">Barista SCA</h2>
+                        <p class="mr-2">This course is for people new to the coffee industry, with no experience, and focuses on the key skills required to work in a coffee shop, like how to set your grinder, make espresso and foam and texture milk for cappuccinos.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    
     <div class="container">
         <div class="row">
             <div class="col">
                 <div class="sca-content">
-                    <h3>Overview</h2>
+                    <h3 class="text center uppercase">Overview</h3>
                     <hr class="section-divider">
                     <p>Explore the differences between Arabicas and Robustas and how to maintain freshness.</p>
                     <p>Extract the perfect espresso following a set of steps that make up the industry discipline.</p>
@@ -94,7 +94,7 @@
         </div>
     </div>
 
-    <! --- form --->
+    <!-- form -->
 
     <div class="container">
         <div class="row no-gutters">
@@ -115,58 +115,54 @@
     </div>
 
 
-    <! --- footer --->
+    <!-- footer -->
 
     <footer>
         <div class="footer">
-
             <div class="container">
-                <div class="row">
-
+                <div class="row no-gutters">
                     <div class="col-6 media d-inline-flex justify-content-center">
                         <ul class="list-inline">
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.facebook.com/" target="_blank">
 <i class="fab fa-facebook-f" aria-hidden="true"></i>
 <span class="sr-only">Facebook</span>
 </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://twitter.com/" target="_blank">
 <i class="fab fa-twitter" aria-hidden="true"></i>
 <span class="sr-only">Twitter</span></a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.linkedin.com" target="_blank">
 <i class="fab fa-linkedin-in" aria-hidden="true"></i>
 <span class="sr-only">LinkedIn</span>
 </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.pinterest.com/" target="_blank">
 <i class="fab fa-pinterest" aria-hidden="true"></i>
 <span class="sr-only">Pinterest</span>
 </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.instagram.com/" target="_blank">
 <i class="fab fa-instagram" aria-hidden="true"></i>
 <span class="sr-only">Instagram</span>
 </a>
                             </li>
-
                         </ul>
                     </div>
                     <div class="col-6 my-info d-inline-flex justify-content-center">
-                        <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
+                        <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                        <span class="sr-only">Github</span><span>&nbsp;</span>
+                        <p>2019| ©roxheff</p>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
-        </div>
     </footer>
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
