--- a/brewing.html
+++ b/brewing.html
@@ -82,7 +82,7 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cards">
-              <a href="aeropress.html"><i class="fas fa-chevron-right">Aeropress</i></a>
+              <a href="aeropress.html"><i class="fas fa-arrow-right">Aeropress</i></a>
               <img src="./assets/images/aeropress.png" alt="aeropress icon" class="card-img">
             </div>
           </div>
@@ -91,7 +91,7 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cards">
-              <a href="cafetiere.html"><i class="fas fa-chevron-right">Cafetiere</a></i>
+              <a href="cafetiere.html"><i class="fas fa-arrow-right">Cafetiere</a></i>
               <img src="./assets/images/french-press.png" alt="cafetiere icon" class="card-img"></a>
             </div>
           </div>
@@ -100,7 +100,7 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cards">
-              <a href="chemex.html"><i class="fas fa-chevron-right">Chemex</a></i>
+              <a href="chemex.html"><i class="fas fa-arrow-right">Chemex</a></i>
               <img src="./assets/images/chemex.png" alt="chemex icon" class="card-img"></a>
             </div>
           </div>
@@ -109,7 +109,7 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cards">
-              <a href="espresso.html"><i class="fas fa-chevron-right">Espresso</a></i>
+              <a href="espresso.html"><i class="fas fa-arrow-right">Espresso</a></i>
               <img src="./assets/images/espresso-machine.png" alt="espresso machine icon" class="card-img"></a>
             </div>
           </div>
