--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -52,7 +52,7 @@
         <div class="container headers-landing">
             <div class="row no-gutters">
                 <div class="col">
-                    <img src="./assets/images/our-coffee.jpg" alt="roasted coffee beans image">
+                    <img src="./assets/images/our-coffee.jpg" alt="roasted coffee beans image" width=100% height=auto>
                     <p class="ph-landing uppercase">blends</p>
                 </div>
             </div>
