--- a/contact.html
+++ b/contact.html
@@ -50,9 +50,9 @@
 
     <div class="container main-container">
         <div class="container headers-landing">
-            <div class="row no-gutters">
-                <div class="col-12">
-                    <img src="./assets/images/contact-us.jpg" alt="woman holding mobile phone image">
+            <div class="row">
+                <div class="col">
+                    <img src="./assets/images/contact-us.jpg" alt="woman holding mobile phone image" width=100% height=auto>
                     <p class="ph-landing">Contact</p>
                 </div>
             </div>
