--- a/intro.html
+++ b/intro.html
@@ -15,9 +15,9 @@
 
     <header>
 
-        <! --- navbar --->
+        <!-- navbar -->
 
-        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+        <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,30 +47,31 @@
     </header>
 
 
-    <! --- main section --->
+    <!-- main section -->
 
     <div class="container main-container">
         <div class="container main-landing">
             <div class="row no-gutters">
                 <div class="col">
                     <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
-                    <p class="ph-landing uppercase">our courses</p>
+                    <p class="ph-landing uppercase">courses</p>
                 </div>
             </div>
         </div>
     </div>
     <br>
 
-    <! --- media object --->
+    <!-- media object -->
 
     <div class="container">
-        <div class="row no-gutters">
-            <div class="col-12">
-                <div class="media">
+        <div class="row">
+            <div class="col">
+
+                <div class="media mt-5 py-3 my-border">
                     <img src="./assets/images/intro-coffee-sca.png" alt="green coffee beans image" class="align-self-center mx-3 mt-2" style="width:33%">
-                    <div class="media-body">
-                        <h2>Introduction to coffee</h2>
-                        <p>This module ideal for anyone who is new to the coffee industry or just has an interest in this wonderful drink.</p>
+                    <div class="media-body mt-5">
+                        <h2 class="uppercase mb-2">Introduction to coffee</h2>
+                        <p class="mr-2">This module ideal for anyone who is new to the coffee industry or just has an interest in this wonderful drink.</p>
                     </div>
                 </div>
             </div>
@@ -78,13 +79,13 @@
     </div>
 
 
-    <! --- overview-section --->
+    <!-- overview-section -->
 
     <div class="container">
         <div class="row no-gutters">
             <div class="col-12">
                 <div class="sca-content">
-                    <h3>Overview</h3>
+                    <h3 class="text center uppercase">Overview</h3>
                     <hr class="section-divider">
                     <p>This course charts coffee’s journey from its origins in Ethiopia to the major commodity it is today, enjoyed by millions of people around the world.</p>
                     <p>From farming the cherries through drying, roasting, brewing and finally drinking, this module looks at the processes coffee goes through.</p>
@@ -96,8 +97,9 @@
             </div>
         </div>
     </div>
+    </div>
 
-    <! --- form --->
+    <!-- form -->
 
     <div class="container">
         <div class="row no-gutters">
@@ -118,58 +120,54 @@
     </div>
 
 
-    <! --- footer --->
+    <!-- footer -->
 
     <footer>
         <div class="footer">
-
             <div class="container">
-                <div class="row">
-
+                <div class="row no-gutters">
                     <div class="col-6 media d-inline-flex justify-content-center">
                         <ul class="list-inline">
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.facebook.com/" target="_blank">
 <i class="fab fa-facebook-f" aria-hidden="true"></i>
 <span class="sr-only">Facebook</span>
 </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://twitter.com/" target="_blank">
 <i class="fab fa-twitter" aria-hidden="true"></i>
 <span class="sr-only">Twitter</span></a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.linkedin.com" target="_blank">
 <i class="fab fa-linkedin-in" aria-hidden="true"></i>
 <span class="sr-only">LinkedIn</span>
 </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.pinterest.com/" target="_blank">
 <i class="fab fa-pinterest" aria-hidden="true"></i>
 <span class="sr-only">Pinterest</span>
 </a>
                             </li>
-                            <li class="list-inline-item">
+                            <li class="list-inline-item footer-inline">
                                 <a href="https://www.instagram.com/" target="_blank">
 <i class="fab fa-instagram" aria-hidden="true"></i>
 <span class="sr-only">Instagram</span>
 </a>
                             </li>
-
                         </ul>
                     </div>
                     <div class="col-6 my-info d-inline-flex justify-content-center">
-                        <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
+                        <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                        <span class="sr-only">Github</span><span>&nbsp;</span>
+                        <p>2019| ©roxheff</p>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
-        </div>
     </footer>
-
 
 
 
