--- a/brewing-sca.html
+++ b/brewing-sca.html
@@ -15,9 +15,9 @@
 
 <header>
 
-    <! --- navbar --->
+    <!-- navbar -->
 
-    <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120px" alt="bbb-logo"></a>
+    <nav class="navbar navbar-expand-sm navbar-light fixed-top"> <a class="navbar-brand" href="index.html"> <img src="./assets/images/coffee-project-logo.png" width="120" alt="coffeeproject-logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,30 +47,30 @@
 </header>
 
 
-<! --- main section --->
+<!-- main section -->
 
 <div class="container main-container">
 <div class="container main-landing">
     <div class="row">
       <div class="col">
         <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" width=100% height=auto>
-        <p class="ph-landing uppercase">our courses</p>
+        <p class="ph-landing uppercase">courses</p>
       </div>
     </div>
   </div>
 </div>
 
-<! --- media object --->
+<!-- media object -->
 
     <div class="container">
         <div class="row">
             <div class="col">
 
-                <div class="media">
+                <div class="media mt-5 py-3 my-border">
                     <img src="./assets/images/brewing-sca.png" alt="cupping coffee image" class="align-self-center mx-3 mt-2" style="width:33%">
-                    <div class="media-body">
-                        <h2>Brewing SCA</h2>
-                        <p>Foundation level introduces the beginner to the different ways of brewing coffee, from Chemex and syphon to V60 and French press. This course is suitable for people with no experience in this field.</p>
+                    <div class="media-body mt-5">
+                        <h2 class="uppercase mb-2">Brewing SCA</h2>
+                        <p class="mr-2">Foundation level introduces the beginner to the different ways of brewing coffee, from Chemex and syphon to V60 and French press. This course is suitable for people with no experience in this field.</p>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
         <div class="row">
             <div class="col">
                 <div class="sca-content">
-                    <h3>Overview</h3>
+                    <h3 class="text center uppercase">Overview</h3>
                     <hr class="section-divider">
                     <p>Brewing guidelines for industry standard coffee.</p>
                     <p>Brewing variables ratio of water to coffee, grind size, brewing time, water temperature and brewing turbulence.</p>
@@ -94,7 +94,7 @@
         </div>
     </div>
 
-<! --- form --->
+<!-- form -->
 
     <div class="container">
         <div class="row no-gutters">
@@ -115,78 +115,7 @@
     </div>
 
 
-    <! --- footer --->
-
-    <footer>
-        <div class="footer">
-
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-6 media d-inline-flex justify-content-center">
-                        <ul class="list-inline">
-                            <li class="list-inline-item">
-                                <a href="https://www.facebook.com/" target="_blank">
-<i class="fab fa-facebook-f" aria-hidden="true"></i>
-<span class="sr-only">Facebook</span>
-</a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://twitter.com/" target="_blank">
-<i class="fab fa-twitter" aria-hidden="true"></i>
-<span class="sr-only">Twitter</span></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://www.linkedin.com" target="_blank">
-<i class="fab fa-linkedin-in" aria-hidden="true"></i>
-<span class="sr-only">LinkedIn</span>
-</a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://www.pinterest.com/" target="_blank">
-<i class="fab fa-pinterest" aria-hidden="true"></i>
-<span class="sr-only">Pinterest</span>
-</a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://www.instagram.com/" target="_blank">
-<i class="fab fa-instagram" aria-hidden="true"></i>
-<span class="sr-only">Instagram</span>
-</a>
-                            </li>
-
-                        </ul>
-                    </div>
-                    <div class="col-6 my-info d-inline-flex justify-content-center">
-                        <p>Designed by roxheff <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square aria-hidden="true""></i></p></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-        </div>
-    </footer><! --- form --->
-
-    <div class="container">
-        <div class="row no-gutters">
-            <div class="col-6 offset-3">
-                <h3 class="text-center form-heading">Sounds interesting?</h3>
-                <form>
-                    <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-                    <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-                    <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
-                    <div class="form-row text-center">
-                        <div class="col">
-                            <button type="submit" class="btn my-button my-border">Send message</button>
-                        </div>
-                </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <! --- footer --->
+    <!-- footer -->
 
     <footer>
         <div class="footer">
@@ -237,7 +166,6 @@
         </div>
         </div>
     </footer>
-
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
