--- a/coffees.html
+++ b/coffees.html
@@ -53,8 +53,8 @@
     <div class="container headers-landing">
       <div class="row">
         <div class="col">
-          <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" width=100% height=auto>
-          <p class="ph-landing">Our Coffees</p>
+          <img src="./assets/images/our-coffee.jpg" alt="roasted coffee beans image" width=100% height=auto>
+          <p class="ph-landing">Coffees</p>
         </div>
       </div>
     </div>
