--- a/espresso.html
+++ b/espresso.html
@@ -107,7 +107,8 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <p class="brewing-download">Want to download it as pdf? Click <a href="./assets/images/Espresso-Brew-Guide.pdf" target="_blank">here</a></p>
+                <p class="brewing-download">Want to download it as pdf?</p>
+                <p class="brewing-download">Click <i class="fas fa-arrow-right"></i><a href="./assets/images/Aeropress-Brew-Guide.pdf" target="_blank">here</a></p>
             </div>
         </div>
     </div>
