changes to contact.html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row no-gutters">
         <div class="col-12">
-          <div class="quote-landing my-border">
+          <div class="quote-landing">
             <p class="quote"> <i class="fas fa-quote-left fa-xs" aria-hidden="true"></i> Life is short, enjoy your coffee <i class="fas fa-quote-right fa-xs" aria-hidden="true"></i></p>
           </div>
         </div>
@@ -94,7 +94,7 @@
   <div class="container headers-landing our-coffees-landing">
     <div class="row no-gutters">
       <div class="col-12">
-        <img src="./assets/images/our-beans.png" alt="roasted coffee beans image" class="our-coffees-img">
+        <img src="./assets/images/our-coffee.jpg" alt="roasted coffee beans image" class="our-coffees-img">
         <p class="ph-landing uppercase">our coffees</p>
       </div>
     </div>
@@ -108,7 +108,7 @@
 
         <div class="col-12 col-md-6">
 
-          <div class="card mx-1">
+          <div class="card" width=400 mx-5>
             <div class="card-header my-border">
               <h2 class="text-center uppercase">Single Origin</h2>
             </div>
@@ -124,7 +124,7 @@
 
         <div class="col-12 col-md-6">
 
-          <div class="card mx-1">
+          <div class="card style="width:400px" mx-1">
             <div class="card-header my-border">
               <h2 class="text-center uppercase">Blends</h2>
             </div>
