--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,10 @@
 
     <div class="container">
         <div class="row no-gutters">
-            <div class="col-10 offset-1">
-                <p>If you are in the coffee business and would like to know more about our products and services, please get in touch</p>
+            <div class="col-10 offset-1 contact-form">
+                <p>Are you in the coffee business and would like to know more about our products and services?</p>
+                <p>Please get in touch.</p>
+                <p>We are passionate about what we do and are already excited at the prospect of working with you!</p>
             </div>
         </div>
     </div>
@@ -75,11 +77,11 @@
     <div class="container">
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <h2 class="text-center form-heading uppercase">Espresso yourself</h2>
+                <h2 class="text-center form-heading uppercase">Don't be a stranger</h2>
                 <form>
                     <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
                     <input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
-                    <textarea rows="5" name="message" id="message" class="form-control" placeholder="Your message goes here" required></textarea>
+                    <textarea rows="5" name="message" id="message" class="form-control" placeholder="Espresso yourself..." required></textarea>
                     <div class="text-center">
                         <div class="col">
                             <button type="submit" class="btn my-button my-border">Send message</button>
@@ -90,22 +92,21 @@
         </div>
     </div>
 
+<hr class="section-divider">
+
     <!-- contact us -->
 
-    <div class="container contact-us">
+    <div class="container contact-info">
         <div class="row no-gutters">
             <div class="col-6 offset-3">
                 <i class="fas fa-envelope fa-2x"></i>
-                <p>hello@coffeeprojectco.ie</p>
+                <p>hi@coffeeproject.ie</p>
                 <i class="fas fa-phone-square-alt fa-2x"></i>
                 <p>+35313657616</p>
                 <i class="fas fa-clock fa-2x"></i>
-                <p>9-16.30 Monday | Friday </p>
-                <p>Roastery opening hours:</p>
-                <p>7.30-17 Monday | Friday * 10-16 Saturday</p>
-                <p><em>Office closed weekends and bank holidays</em></p>
+                <p>8-16.30 Mon| Sat <span class="bank-hol"><em>*Closed on bank holidays</em></span></p>
                 <i class="fas fa-address-card fa-2x"></i>
-                <p>137 Peaberry St. | Dublin 1 | Ireland | A12 BC34</p>
+                <p>137 Peaberry Street, Dublin 1 | A12 BC34</p>
             </div>
         </div>
     </div>
