added images to brewing cards and modified brewing.html

--- a/brewing.html
+++ b/brewing.html
@@ -125,12 +125,25 @@
     <div class="row">
       <div class="col">
         <h2>Handy filter coffee brewing tips</h2>
-        <p>BUY FRESH, GRIND FRESH</p>
+        <p>-BUY FRESH, GRIND FRESH</p>
         <ul>
           <li>USE GOOD WATER</li>
+          <p>Water is the main ingredient in your coffee so can have a big impact on taste. Always use filtered water, especially if you live in a hard water area (or try bottled water). Make sure the water is the same temperature each time you brew - just off the boil is fine, or if you have a thermometer, try aiming for 95°.</p>
           <li>MEASURE YOUR COFFEE</li>
+          <p>Measure your coffee and water as accurately as you can - ideally by weighing both. You can use an ordinary kitchen scales, but if you want more precision then try these specialised brewing scales.</p>
+          <p>We recommend:</p>
+          <ul>
+            <li><p>About 60 grams of coffee per litre of coffee for pour-over brew methods (like V60, Chemex, percolators)</p></li>
+            <li><p>About 68 grams per litre for methods where the coffee and water sit together in a container before filtering (like French Press and Aeropress)<p/></li>
+            <li><p>If you like stronger coffee, use a bit more!</p></li>
+          </ul>  
           <li>FOLLOW ONE METHOD</li>
+          <p>Try and brew your coffee the same way every time you make it - brew for the same length of time, at the same temperature, in the same way.</p>
+          <p>That way the only things you need to change are the amount of coffee (for strength), and the grind size (for flavour).</p>
           <li>NAIL YOUR GRIND SIZE</li>
+          <p>Once you’ve made your coffee, taste it! Is it: Weak, thin, sour, light? Grind finer next time.</p>
+          <p>Too strong, bitter, dry, burnt tasting? Grind coarser next time.</p>
+          <p>Just right?</p>
         </ul>
         
         
