--- a/index.html
+++ b/index.html
@@ -102,43 +102,11 @@
 
   <!-- cards for beans section -->
 
-  <div class="container cards-beans px-0">
-    <div class="card-deck my-4">
-      <div class="row no-gutters">
+As one of the U. K’s leading coffee roasters & suppliers, we ethically & sustainably source all our green coffee beans from our direct trading partners across the world. We buy only new season harvests – this ensures our coffee really is as fresh as possible.
 
-        <div class="col-12 col-md-6">
+We also created the world's first triple certified coffee - approved by the Fairtrade Foundation, Rainforest Alliance and Organic Food Federation. Like all our coffee, it's roasted and packed to perfection (after all, we practically invented the science of coffee freshness).
 
-          <div class="card" width=400 mx-5>
-            <div class="card-header my-border">
-              <h2 class="text-center uppercase">Single Origin</h2>
-            </div>
-            <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image" width=256 height=146>
-            <div class="card-body my-border">
-              <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Often we buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-              <a href="coffees-single.html" class="btn btn-info my-button my-border">Read more</a>
-            </div>
-          </div>
-        </div>
-
-
-
-        <div class="col-12 col-md-6">
-
-          <div class="card style="width:400px" mx-1">
-            <div class="card-header my-border">
-              <h2 class="text-center uppercase">Blends</h2>
-            </div>
-            <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image" width=256 height=146>
-            <div class="card-body my-border">
-              <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
-              <a href="coffees-blends.html" class="btn btn-info my-button my-border">Read more</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
+You can find out more about our industry-leading roasting process here or continue to browse all of our latest wholesale coffees online via the links below.
 
   <!-- sca courses -->
 
@@ -146,7 +114,7 @@
   <div class="container headers-landing">
     <div class="row no-gutters">
       <div class="col-12">
-        <img src="./assets/images/our-courses.png" alt="roasted coffee beans image">
+        <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" class="ourcourses-img">
         <p class="ph-landing uppercase">our courses</p>
       </div>
     </div>
@@ -160,7 +128,7 @@
         <div class="container">
           <div class="row no-gutters">
             <div class="col-12 d-inline-flex justify-content-center">
-              <img src="./assets/images/sca-logo.png" alt="sca logo image" width=300 height=300>
+              <img src="./assets/images/sca-logo.png" alt="sca logo image">
             </div>
           </div>
         </div>
@@ -186,7 +154,7 @@
   <div class="container headers-landing">
     <div class="row no-gutters">
       <div class="col-12">
-        <img src="./assets/images/brew-guides.png" alt="brewing vesels image">
+        <img src="./assets/images/brew-guides.png" alt="brewing vesels image" class="brewguides-img">
         <p class="ph-landing">Brewing Guides</p>
       </div>
     </div>
@@ -194,17 +162,27 @@
   <br>
   <br>
 
- <! --- brew cards/links to downloadable pdfs --->
+ <!-- brewing cards -->
+ 
+ <div class="container">
+   <div class="row no-gutters">
+     <div class="col-12 text-center">
+       <p>Carefully measuring the ingredients, in a specific size or shape under the application of a particular heat, for the right amount of time.</p>
+       <p>Coffee should always be roasted recently and ground just before preparation. When making coffee consider:</p>
+     </div>
+   </div>
+ </div>
 
   <div class="container">
-    <div class="card-columns d-inline-flex justify-content-center">
+    <div class="card-columns d-inline-flex justify-content-center landingbrew-cards">
       <div class="row no gutters">
 
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cards">
-              <a href="aeropress.html"><i class="fas fa-chevron-right">Aeropress</i></a>
-              <img src="./assets/images/brewing-1.jpg" alt="aeropress icon" class="card-img">
+              <p><strong>Water</strong></p>
+              <img src="./assets/images/water.png" alt="water icon" class="card-img">
+              <p>More<a href="brewing.html"> >here</a>
             </div>
           </div>
         </div>
@@ -212,8 +190,9 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cards">
-              <a href="cafetiere.html"><i class="fas fa-chevron-right">Cafetiere</a></i>
-              <img src="./assets/images/brewing-2.jpg" alt="cafetiere icon" class="card-img"></a>
+              <p><strong>Measure</strong></p>
+              <img src="./assets/images/measure.png" alt="measure icon" class="card-img">
+              <p>More<a href="brewing.html"> >here</a>
             </div>
           </div>
         </div>
@@ -221,8 +200,9 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cards">
-              <a href="chemex.html"><i class="fas fa-chevron-right">Chemex</a></i>
-              <img src="./assets/images/brewing-3.jpg" alt="chemex icon" class="card-img"></a>
+              <p><strong>Method</strong></p>
+              <img src="./assets/images/method.png" alt="paper filter icon" class="card-img">
+              <p>More<a href="brewing.html"> >here</a>
             </div>
           </div>
         </div>
@@ -230,8 +210,9 @@
         <div class="col-6 col-md-3">
           <div class="card">
             <div class="card-body text-center brew-cards">
-              <a href="espresso.html"><i class="fas fa-chevron-right">Espresso</a></i>
-              <img src="./assets/images/brewing-4.jpg" alt="espresso machine icon" class="card-img"></a>
+              <p><strong>Grind</strong></p>
+              <img src="./assets/images/grind.png" alt="grinder icon" class="card-img">
+              <p>More<a href="brewing.html"> >here</a>
             </div>
           </div>
         </div>
@@ -240,7 +221,9 @@
     </div>
   </div>
 
-  <hr class="section-divider" <!-- testimonials carousel -->
+  <hr class="section-divider" 
+  
+<!-- carousel -->
 
   <div class="container carousel-container">
     <div class="row no-gutters">
