fixed responsiveness of images on landing page

--- a/index.html
+++ b/index.html
@@ -95,18 +95,30 @@
     <div class="row no-gutters">
       <div class="col-12">
         <img src="./assets/images/our-coffee.jpg" alt="roasted coffee beans image" class="our-coffees-img">
-        <p class="ph-landing uppercase">our coffees</p>
+        <p class="ph-landing uppercase">coffees</p>
       </div>
     </div>
   </div>
 
   <!-- cards for beans section -->
+  
+  <div class="container coffees-text my-4">
+    <div class="row no-gutters">
+      <div class="col-12">
+        <p>As one of the U. K’s leading coffee roasters & suppliers, we ethically & sustainably source all our green coffee beans from our direct trading partners across the world. We buy only new season harvests – this ensures our coffee really is as fresh as possible.</p>
+        <p>We also created the world's first triple certified coffee - approved by the Fairtrade Foundation, Rainforest Alliance and Organic Food Federation. Like all our coffee, it's roasted and packed to perfection (after all, we practically invented the science of coffee freshness).</p>
+        <p>You can find out more about our industry-leading roasting process here or continue to browse all of our latest wholesale coffees online via the links below.</p>
+        
+        
+      </div>
+    </div>
+  </div>
 
-As one of the U. K’s leading coffee roasters & suppliers, we ethically & sustainably source all our green coffee beans from our direct trading partners across the world. We buy only new season harvests – this ensures our coffee really is as fresh as possible.
 
-We also created the world's first triple certified coffee - approved by the Fairtrade Foundation, Rainforest Alliance and Organic Food Federation. Like all our coffee, it's roasted and packed to perfection (after all, we practically invented the science of coffee freshness).
 
-You can find out more about our industry-leading roasting process here or continue to browse all of our latest wholesale coffees online via the links below.
+
+
+
 
   <!-- sca courses -->
 
@@ -115,12 +127,12 @@ You can find out more about our industry-leading roasting process here or contin
     <div class="row no-gutters">
       <div class="col-12">
         <img src="./assets/images/our-courses.png" alt="roasted coffee beans image" class="ourcourses-img">
-        <p class="ph-landing uppercase">our courses</p>
+        <p class="ph-landing uppercase">courses</p>
       </div>
     </div>
   </div>
 
-  <div class="sca-section">
+  <div class="sca-section my-5">
 
     <div class="container">
       <div class="row no-gutters">
@@ -128,7 +140,7 @@ You can find out more about our industry-leading roasting process here or contin
         <div class="container">
           <div class="row no-gutters">
             <div class="col-12 d-inline-flex justify-content-center">
-              <img src="./assets/images/sca-logo.png" alt="sca logo image">
+              <img src="./assets/images/sca-logo.png" alt="sca logo image" width=200 height=200>
             </div>
           </div>
         </div>
@@ -146,16 +158,13 @@ You can find out more about our industry-leading roasting process here or contin
     </div>
     </div>
   
-
-
-
   <!-- brew guides -->
 
   <div class="container headers-landing">
     <div class="row no-gutters">
       <div class="col-12">
         <img src="./assets/images/brew-guides.png" alt="brewing vesels image" class="brewguides-img">
-        <p class="ph-landing">Brewing Guides</p>
+        <p class="ph-landing">guides</p>
       </div>
     </div>
   </div>
@@ -295,7 +304,7 @@ You can find out more about our industry-leading roasting process here or contin
           </div>
         </div>
         <div class="row">
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-lg-4">
             <div class="media">
               <div class="d-none d-sm-block">
                 <img src="./assets/images/man1.jpg" class="my-border mr-3 p-2" height=100 width=100>
@@ -308,7 +317,7 @@ You can find out more about our industry-leading roasting process here or contin
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-lg-4">
             <div class="media">
               <div class="d-none d-sm-block">
                 <img src="./assets/images/woman1.jpg" class="my-border mr-3 p-2" height=100 width=100>
@@ -321,7 +330,7 @@ You can find out more about our industry-leading roasting process here or contin
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4">
+          <div class="col-12 col-lg-4">
             <div class="media">
               <div class="d-none d-sm-block">
                 <img src="./assets/images/man2.jpg" class="my-border mr-3 p-2" height=100 width=100>
