--- a/coffees.html
+++ b/coffees.html
@@ -62,20 +62,20 @@
 
   <! --- cards for beans section --->
 
-  <div class="container cards-beans">
+  <div class="container my-5">
     <div class="card-deck">
       <div class="row">
 
         <div class="col-12 col-md-6">
 
-          <div class="card">
+          <div class="card my-border">
             <div class="card-header">
-              <h3>Single Origin</h3>
+              <h3 class="uppercase">Single Origin</h3>
             </div>
             <img class="card-img-top" src="./assets/images/single-origin-card1.png" alt="Kettle pouring into chemex image">
             <div class="card-body">
               <p class="card-text">This is where the fun is. These are seasonal coffees that are constantly changing. Very often we buy entire micro lots, giving us world exclusivity on that coffee – when we do this you know that the coffee is truly exceptional.</p>
-              <a href="coffees-single.html" class="btn btn-light">Read more</a>
+              <a href="coffees-single.html" class="btn my-button">Read more</a>
             </div>
           </div>
         </div>
@@ -84,14 +84,14 @@
 
         <div class="col-12 col-md-6">
 
-          <div class="card">
+          <div class="card my-border">
             <div class="card-header">
-              <h3>Blends</h3>
+              <h3 class="uppercase">Blends</h3>
             </div>
             <img class="card-img-top" src="./assets/images/blends-card2.png" alt="Espresso machine and cups image">
             <div class="card-body">
               <p class="card-text">With every new crop, beans change subtly. With every new coffee we import, a new blend awaits. We know that creating the "perfect" blend is a futile persuit but we love trying and we know you'll enjoy what we create.</p>
-              <a href="coffees-blends.html" class="btn btn-light">Read more</a>
+              <a href="coffees-blends.html" class="btn my-button">Read more</a>
             </div>
           </div>
         </div>
@@ -100,7 +100,54 @@
   </div>
   </div>
 
+<!-- footer -->
 
+    <footer>
+        <div class="footer">
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-6 media d-inline-flex justify-content-center">
+                        <ul class="list-inline">
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.facebook.com/" target="_blank">
+<i class="fab fa-facebook-f" aria-hidden="true"></i>
+<span class="sr-only">Facebook</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://twitter.com/" target="_blank">
+<i class="fab fa-twitter" aria-hidden="true"></i>
+<span class="sr-only">Twitter</span></a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.linkedin.com" target="_blank">
+<i class="fab fa-linkedin-in" aria-hidden="true"></i>
+<span class="sr-only">LinkedIn</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.pinterest.com/" target="_blank">
+<i class="fab fa-pinterest" aria-hidden="true"></i>
+<span class="sr-only">Pinterest</span>
+</a>
+                            </li>
+                            <li class="list-inline-item footer-inline">
+                                <a href="https://www.instagram.com/" target="_blank">
+<i class="fab fa-instagram" aria-hidden="true"></i>
+<span class="sr-only">Instagram</span>
+</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-6 my-info d-inline-flex justify-content-center">
+                        <a href="https://github.com/roxanahefferon" target="_blank"><i class="fab fa-github-square" aria-hidden="true"></i></a>
+                        <span class="sr-only">Github</span><span>&nbsp;</span>
+                        <p>2019| ©roxheff</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
